--- a/.github/workflows/test-feature.yml
+++ b/.github/workflows/test-feature.yml
@@ -19,24 +19,16 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  list-tests:
-    outputs:
-      test-paths: ${{ steps.test-paths.outputs.test-paths }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - id: test-paths
-        run: |
-          test_paths=$(ls test/*.sh | jq -Rsc 'split("\n")[:-1]')
-          echo "test-paths=$test_paths" >$GITHUB_OUTPUT
-  run-tests:
-    needs: list-tests
+  test-feature:
     strategy:
       fail-fast: false
       matrix:
-        test-path: ${{ fromJSON(needs.list-tests.outputs.test-paths) }}
+        image:
+          - mcr.microsoft.com/devcontainers/base:debian
+          - mcr.microsoft.com/devcontainers/base:ubuntu
+          - debian:bookworm-slim
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: npm install -g @devcontainers/cli
-      - run: bash ${{ matrix.test-path }}
+      - run: bash test.sh ${{ matrix.image }}
