--- a/.github/workflows/publish-feature.yml
+++ b/.github/workflows/publish-feature.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: devcontainers-community/publish-feature@v1
         with:
-          collection: ghcr.io/devcontainers-community/features
+          image: ghcr.io/devcontainers-community/features/cmake
