--- a/.github/workflows/publish-feature.yml
+++ b/.github/workflows/publish-feature.yml
@@ -8,9 +8,17 @@ concurrency:
   cancel-in-progress: true
 jobs:
   publish-feature:
+    permissions:
+      contents: read
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: devcontainers-community/publish-feature@v1
+      - uses: docker/login-action@v2
         with:
-          image: ghcr.io/devcontainers-community/features/cmake
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: jcbhmr/publish-feature@v1
+        with:
+          image: ghcr.io/jcbhmr/features/cmake
