--- a/devcontainer-feature.json
+++ b/devcontainer-feature.json
@@ -1,22 +1,27 @@
 {
-  "id": "cmake",
-  "version": "0.1.0",
   "name": "CMake",
-  "documentationURL": "https://devcontainers.community/features-cmake/",
-  "licenseURL": "https://github.com/devcontainers-community/features-cmake/blob/main/LICENSE",
-  "description": "🍰 Installs the CMake build tool",
+  "id": "cmake",
+  "version": "2.0.0",
+  "description": "A feature to install CMake",
   "options": {
     "version": {
       "type": "string",
-      "default": "latest",
       "proposals": [
         "latest",
-        "3.27.2"
+        "3.25.2",
+        "3.25.1",
+        "3.25.0",
+        "3.24.2"
       ],
-      "description": "Choose a specific version to install. The default is 'latest'. If specified, this should be a full 'X.Y.Z' version number."
+      "default": "latest",
+      "description": "CMake version to install."
     }
   },
-  "installsAfter": [
-    "ghcr.io/devcontainers/features/common-utils"
-  ]
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "twxs.cmake"
+      ]
+    }
+  }
 }
